# angular-projects

./: angular.json  package-lock.json  package.json
aula-diretivas/: README.md  angular.json  package.json
aula-viewchildren/: package-lock.json
aula-viewchildren/src/: index.html
aulas-faculdade/01.04/: intrucoes.txt
aulas/20.03/: index.html  novaabordagem.html
aulas/aula-diretivas/: package-lock.json
aulas/aula-ngcontent/: angular.json  package-lock.json  package.json
aulas/aula-ngcontent-original/: README.md
aulas/aula-ngtemplate/: README.md  angular.json  package-lock.json  package.json
aulas/aula-pipes/: README.md  angular.json  package-lock.json  package.json
aulas/aula-reactive-forms/: README.md  angular.json
aulas/aula-viewchildren/: README.md  angular.json  package.json
aulas/tdf/: README.md  angular.json  package-lock.json  package.json
cards-project/: README.md  angular.json  package-lock.json  package.json
cards-project/src/: styles.scss
churrascometro/: angular.json  package-lock.json  package.json
django/: db.sqlite3  pyproject.toml
django/flix-api/: db.sqlite3  pyproject.toml
django/flix-api/app/: settings.py  urls.py
django/flix-api/genres/: admin.py  views.py
django/flix-api/genres/migrations/: 0001_initial.py
filtro_usuarios/: README.md  angular.json  package-lock.json  package.json
lista_ngfor/: README.md  angular.json  package-lock.json  package.json
moviewheel/: README.md  angular.json  package-lock.json  package.json
projetos/: .gitignore
teste/: README.md  angular.json  package-lock.json  package.json
(+803 files in other folders)
